@@ -4,5 +4,21 @@ majors 2.4 2.6
 flavour parisc32
 kernel-2.4 2.4.27-32-smp
 kernel-2.6 2.6.8-1-32-smp
-usable 2.4.25-32 2.4.25-32-smp 2.4.26-32 2.4.26-32-smp 2.4.27-32 2.4.27-32-smp 2.6.8-1-32 2.6.8-1-32-smp
-unusable 2.4.25-64 2.4.25-64-smp 2.4.26-64 2.4.26-64-smp 2.4.27-64 2.4.27-64-smp 2.6.8-1-64 2.6.8-1-64-smp
+usable \
+  2.4.25-32 \
+  2.4.25-32-smp \
+  2.4.26-32 \
+  2.4.26-32-smp \
+  2.4.27-32 \
+  2.4.27-32-smp \
+  2.6.8-1-32 \
+  2.6.8-1-32-smp
+unusable \
+  2.4.25-64 \
+  2.4.25-64-smp \
+  2.4.26-64 \
+  2.4.26-64-smp \
+  2.4.27-64 \
+  2.4.27-64-smp \
+  2.6.8-1-64 \
+  2.6.8-1-64-smp
