@@ -3,5 +3,25 @@ majors 2.4 2.6
 flavour itanium
 kernel-2.4 2.4-itanium-smp
 kernel-2.6 2.6-itanium-smp
-usable 2.4-itanium 2.4-itanium-smp 2.4.27-1-itanium 2.4.27-1-itanium-smp 2.6-itanium 2.6-itanium-smp 2.6.7-1-itanium 2.6.7-1-itanium-smp 2.6.8-1-itanium 2.6.8-1-itanium-smp
-unusable 2.4-mckinley 2.4-mckinley-smp 2.4.27-1-mckinley 2.4.27-1-mckinley-smp 2.6-mckinley 2.6-mckinley-smp 2.6.7-1-mckinley 2.6.7-1-mckinley-smp 2.6.8-1-mckinley 2.6.8-1-mckinley-smp
+usable \
+  2.4-itanium \
+  2.4-itanium-smp \
+  2.4.27-1-itanium \
+  2.4.27-1-itanium-smp \
+  2.6-itanium \
+  2.6-itanium-smp \
+  2.6.7-1-itanium \
+  2.6.7-1-itanium-smp \
+  2.6.8-1-itanium \
+  2.6.8-1-itanium-smp
+unusable \
+  2.4-mckinley \
+  2.4-mckinley-smp \
+  2.4.27-1-mckinley \
+  2.4.27-1-mckinley-smp \
+  2.6-mckinley \
+  2.6-mckinley-smp \
+  2.6.7-1-mckinley \
+  2.6.7-1-mckinley-smp \
+  2.6.8-1-mckinley \
+  2.6.8-1-mckinley-smp
