@@ -4,5 +4,27 @@ majors 2.4 2.6
 flavour amiga
 kernel-2.4 2.4.27-amiga
 kernel-2.6 2.6.8-amiga
-usable 2.2.25-amiga 2.4.27-amiga 2.6.8-amiga
-unusable 2.2.25-atari 2.2.25-bvme6000 2.2.25-mac 2.2.25-mvme147 2.2.25-mvme16x 2.4.27-atari 2.4.27-bvme6000 2.4.27-mac 2.4.27-mvme147 2.4.27-mvme16x 2.4.27-q40 2.6.8-atari 2.6.8-bvme6000 2.6.8-hp 2.6.8-mac 2.6.8-mvme147 2.6.8-mvme16x 2.6.8-q40 2.6.8-sun3
+usable \
+  2.2.25-amiga \
+  2.4.27-amiga \
+  2.6.8-amiga
+unusable \
+  2.2.25-atari \
+  2.2.25-bvme6000 \
+  2.2.25-mac \
+  2.2.25-mvme147 \
+  2.2.25-mvme16x \
+  2.4.27-atari \
+  2.4.27-bvme6000 \
+  2.4.27-mac \
+  2.4.27-mvme147 \
+  2.4.27-mvme16x \
+  2.4.27-q40 \
+  2.6.8-atari \
+  2.6.8-bvme6000 \
+  2.6.8-hp \
+  2.6.8-mac \
+  2.6.8-mvme147 \
+  2.6.8-mvme16x \
+  2.6.8-q40 \
+  2.6.8-sun3
