@@ -3,5 +3,11 @@ cpuinfo mq_pro.cpuinfo
 majors 2.4
 flavour r5k-lasat
 kernel-2.4 2.4.27-r5k-lasat
-usable 2.4.27-r5k-lasat
-unusable 2.4.27-r3k-kn02 2.4.27-r4k-kn04 2.4.27-sb1-swarm-bn 2.4.27-xxs1500 2.4.27-r5k-cobalt
+usable \
+  2.4.27-r5k-lasat
+unusable \
+  2.4.27-r3k-kn02 \
+  2.4.27-r4k-kn04 \
+  2.4.27-sb1-swarm-bn \
+  2.4.27-xxs1500 \
+  2.4.27-r5k-cobalt
