@@ -6,6 +6,7 @@ base-installer (1.15) UNRELEASED; urgency=low
     - Only look at the first cpu line in cpuinfo on powerpc.
     - Add chrp_rs6k tests based on /proc/cpuinfo provided by Cajus
       Pollmeier.
+    - Use backslash-continuations in tests to simplify future diffs.
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 24 Dec 2004 01:49:56 +0000
 
